ui/scss/component/_file-render.scss
/* ... */
.file-viewer__embedded-gradient {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
  background: linear-gradient(#000000, #00000000 70%);
  height: 75px;
  z-index: 1;
}

.file-viewer__embedded-title {
  max-width: 75%;
  z-index: 2;
  display: flex;
  align-items: center;
  padding-left: var(--spacing-s);
  color: white;
}

.file-viewer__embedded-info {
  display: flex;
  align-items: center;
  font-size: var(--font-small);
  margin-left: var(--spacing-m);
  white-space: nowrap;
  position: relative;
  overflow: hidden;

  & > *:not(:last-child) {
    margin-right: var(--spacing-s);
  }
}

.file-render__content {
  width: 100%;
  height: 100%;
  overflow: auto;
  max-width: 100vw;
}

//
// Custom viewers live below here
// These either have custom class names that can't be changed or have styles that need to be overridden
//

// Code-viewer
.CodeMirror {
  @extend .file-render__content;

  .cm-invalidchar {
    display: none;
  }

  .CodeMirror .CodeMirror-lines {
    // is there really a .CodeMirror inside a .CodeMirror?
    padding: var(--spacing-s) 0;
  }

  .CodeMirror-code {
    @include font-sans;
    letter-spacing: 0.1rem;
  }

  .CodeMirror-gutters {
    background-color: var(--color-gray-1);
    border-right: 1px solid var(--color-gray-4);
    padding-right: var(--spacing-m);
  }

  .CodeMirror-line {
    padding-left: var(--spacing-m);
  }

  .CodeMirror-linenumber {
    color: var(--color-gray-5);
  }
}

// ****************************************************************************
// Video
// ****************************************************************************

.video-js-parent {
  height: 100%;
  width: 100%;
}

// By default no video js play button
.vjs-big-play-button {
  display: none;
}

.video-js {
  height: 100%;
  width: 100%;

  .vjs-modal-dialog .vjs-modal-dialog-content {
    position: relative;
    padding-top: 5rem;
    // Make sure no videojs message interferes with overlaying buttons
    pointer-events: none;
  }

  .vjs-control-bar {
    .vjs-remaining-time {
      display: none;
    }

    .vjs-current-time,
    .vjs-time-divider,
    .vjs-duration {
      display: flex;
    }
  }

  .vjs-picture-in-picture-control {
    display: none;
  }
}

// ****************************************************************************
// Video::Overlays
// ****************************************************************************

.video-js {
  .vjs-overlay-playrate,
  .vjs-overlay-seeked {
    background-color: rgba(0, 0, 0, 0.5);
    font-size: var(--font-large);
    width: auto;
    padding: 10px 30px;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);

    animation: fadeOutAnimation ease-in 0.6s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
  }

  @keyframes fadeOutAnimation {
    0% {
      opacity: 1;
      visibility: visible;
    }
    100% {
      opacity: 0;
      visibility: hidden;
    }
  }
}

// ****************************************************************************
// Video - Mobile UI
// ****************************************************************************

.video-js.vjs-mobile-ui {
  .vjs-control-bar {
    background-color: transparent;
  }

  .vjs-touch-overlay:not(.show-play-toggle) {
    .vjs-control-bar {
      // Sync the controlBar's visibility with the overlay's
      display: none;
    }
  }

  .vjs-touch-overlay {
    &.show-play-toggle,
    &.skip {
      background-color: rgba(0, 0, 0, 0.5);
    }
  }
}

// ****************************************************************************
// Layout and control visibility
// ****************************************************************************

.video-js.vjs-fullscreen,
.video-js:not(.vjs-fullscreen) {
  // --- Unhide desired components per layout ---
  &.vjs-layout-x-small {
    .vjs-playback-rate {
      display: flex !important;
    }
  }

  &.vjs-layout-small {
    .vjs-current-time,
    .vjs-time-divider,
    .vjs-duration,
    .vjs-playback-rate {
      display: flex !important;
    }
  }

  // --- Adjust spacing ---
  .vjs-current-time {
    padding-right: 0;
  }

  .vjs-duration {
    padding-left: 0;
  }

  .vjs-playback-rate .vjs-playback-rate-value {
    // Reduce the gigantic font a bit. Default was 1.5em.
    font-size: 1.25em;
    line-height: 2.5;
  }

  .vjs-playback-rate .vjs-menu {
    // Extend the width to prevent a potential scrollbar from blocking the text.
    width: 8em;
    left: -2em;
  }
}

.vjs-layout-medium {
  border-radius: var(--border-radius);
}

.video-js.vjs-fullscreen {
  .vjs-button--theater-mode {
    display: none;
  }
}

// ****************************************************************************
// Tap-to-unmute
// ****************************************************************************

.video-js--tap-to-unmute {
  visibility: hidden; // Start off as hidden.
  z-index: 2;
  position: absolute;
  top: var(--spacing-xs);
  left: var(--spacing-xs);
  padding: var(--spacing-xs) var(--spacing-m); // Make it comfy for touch.
  color: var(--color-gray-1);
  background: black;
  border: 1px solid var(--color-gray-4);
  opacity: 0.9;

  &:hover {
    opacity: 1;
    color: var(--color-white);
  }
}

// ****************************************************************************
// ****************************************************************************

.video-js:hover {
  .vjs-big-play-button {
    background-color: var(--color-primary);
  }
}

.file-render {
  .video-js {
    /*display: flex;*/
    /*align-items: center;*/
    /*justify-content: center;*/
  }

  .vjs-big-play-button {
    @extend .button--icon;
    @extend .button--play;
    border: none;
    /*position: static;*/
    z-index: 2;

    .vjs-icon-placeholder {
      display: none;
    }
  }

  .vjs-menu-item-text,
  .vjs-icon-placeholder {
    text-transform: capitalize;
  }
}
/* ... */

