Fix video border radius on mobile

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -551,7 +551,8 @@
   }
 }
 
-.vjs-layout-medium {
+.vjs-layout-medium,
+.vjs-layout-small {
   border-radius: var(--border-radius);
 }
 
